# omni-search-engine

./: .coverage  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  SKILLS-ROADMAP.md  USAGE.md  bug-fix-log.md  config.py  config.yaml  debug_chunker_local.py  debug_regex.py  dependencies.py  docker-compose.yml  handoff_dotfiles_setup.md  indexer.py  indexer.py.bak  indexer.py.bak_log  install.sh  logger.py  omni-search-engine-documentazione-generica.md  pyproject.toml  reproduce_bug.py  requirements.txt  server.py  server.py.bak  server.py.bak_log  settings.py  utils.py  verify_chunker.py  watcher.py  watcher.py.bak  watcher.py.bak_log
.beads/: metadata.json
.claude-plugin/: marketplace.json
.serena/: project.yml
crawlers/: markdown_crawler.py
data/: audit.sqlite
docs/: task-da-fare.md
omni_search_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
qwen_credential/: __init__.py  account_manager.py  account_qwen.py  qwen_wrapper.py
repositories/: snippet_repository.py
scripts/: check.sh
services/: embedding_service.py  indexer_service.py  rerank_service.py
tests/: __init__.py  test_analytics_manual.py  test_check_script.py  test_chunker.py  test_chunker_inline.py  test_chunker_manual.py  test_chunker_overlap.py  test_credential_rotation_integration.py  test_embeddings.py  test_enhanced_chunking.py  test_indexer.py  test_integration.py  test_qwen_credential.py  test_rerank.py  test_serialization.py  test_shadow_observer.py  (+3 more)
(+44 files in other folders)
